--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,58 @@
 {% extends "base.html" %}
 {% block content %}
+<style>
+
+
+.fullscreen-bg {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: -100;
+}
+
+.fullscreen-bg__video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@media (min-aspect-ratio: 16/9) {
+  .fullscreen-bg__video {
+    height: 300%;
+    top: -100%;
+  }
+}
+
+@media (max-aspect-ratio: 16/9) {
+  .fullscreen-bg__video {
+    width: 300%;
+    left: -100%;
+  }
+}
+
+@media (max-width: 767px) {
+  .fullscreen-bg {
+    background: url('../img/videoframe.jpg') center center / cover no-repeat;
+  }
+
+  .fullscreen-bg__video {
+    display: none;
+  }
+}
+
+
+</style>
 <h1>Welcome to CoDe-chan!</h1>
+    <div class="fullscreen-bg">
+    <video loop muted autoplay poster="img/videoframe.jpg" class="fullscreen-bg__video">
+        <source src="cat1.webm" type="video/webm">
+    </video>
+	</div>
     {% for post in posts %}
     <div><p><b>{{ post.title }}</b> by <i>{{ post.user_name }}</i> <br />
         {{ post.body }}</p>
