Cat video ha been fixed

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -49,8 +49,8 @@
 </style>
 <h1>Welcome to CoDe-chan!</h1>
     <div class="fullscreen-bg">
-    <video loop muted autoplay poster="img/videoframe.jpg" class="fullscreen-bg__video">
-        <source src="cat1.webm" type="video/webm">
+    <video loop autoplay poster="img/videoframe.jpg" class="fullscreen-bg__video">
+        <source src="video.webm" type="video/webm">
     </video>
 	</div>
     {% for post in posts %}
