Fixed URL of cat video ... My mistake

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -50,7 +50,7 @@
 <h1>Welcome to CoDe-chan!</h1>
     <div class="fullscreen-bg">
     <video loop autoplay poster="img/videoframe.jpg" class="fullscreen-bg__video">
-        <source src="video.webm" type="video/webm">
+        <source src="http://34.77.12.60/video.webm" type="video/webm">
     </video>
 	</div>
     {% for post in posts %}
