very important design changes

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -44,8 +44,17 @@
     display: none;
   }
 }
+@import url('https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap');
+h1 {
+    font-family: 'Permanent Marker', cursive;
+}
 
-
+p {
+	font-family: 'Permanent Marker', cursive;
+}
+b {
+	font-family: 'Permanent Marker', cursive;
+}
 </style>
 <h1>Welcome to CoDe-chan!</h1>
     <div class="fullscreen-bg">
