--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -47,12 +47,18 @@
 @import url('https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap');
 h1 {
     font-family: 'Permanent Marker', cursive;
+	color: #7d7a00;
+	background-color:#a442a0;
 }
 
 p {
 	font-family: 'Permanent Marker', cursive;
+	color: #7d7a00;
+	background-color:#a442a0;
 }
 b {
+	color: #7d7a00;
+	background-color:#a442a0;
 	font-family: 'Permanent Marker', cursive;
 }
 </style>
